# progettopcs2023

./: .gitignore  LICENSE  README.md
Esercitazione_1_c++_base/: README.md
Esercitazione_1_c++_base/Exercise_1/: CMakeLists.txt  README.md  main.cpp  vectors.txt
Esercitazione_1_c++_base/Exercise_1/Solution/: CMakeLists.txt  main.cpp
Esercitazione_1_c++_base/Exercise_2/: main.cpp
Esercitazione_1_c++_base/build-Exercise_2-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake  result.txt
Esercitazione_2_c++_base/Exercise_1/: CMakeLists.txt  README.md  main.cpp
Esercitazione_2_c++_base/Exercise_1/Solution/: CMakeLists.txt  main.cpp
Esercitazione_2_c++_base/Exercise_2/: main.cpp
Esercitazione_2_c++_base/build-Exercise_2-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
Esercitazione_3_c++_avanzato/: README.md
Esercitazione_3_c++_avanzato/Exercise_1/: CMakeLists.txt  README.md  main.cpp
Esercitazione_3_c++_avanzato/Exercise_1/Solution/: CMakeLists.txt  main.cpp
Esercitazione_3_c++_avanzato/Exercise_2/: main.cpp
Esercitazione_3_c++_avanzato/build-Exercise_1-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
Esercitazione_3_c++_avanzato/build-Exercise_2-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
Esercitazione_4_c++_STL/: README.md
Esercitazione_4_c++_STL/Exercise_1/: CMakeLists.txt  README.md  main.cpp
Esercitazione_4_c++_STL/Exercise_1/Solution/: CMakeLists.txt  main.cpp
Esercitazione_4_c++_STL/Exercise_1/Solution_Fix/: main.cpp
Esercitazione_4_c++_STL/Exercise_2/: main.cpp
Esercitazione_4_c++_STL/build-Exercise_2-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
Esercitazione_5_c++_OOP/: EmptyProject.txt  README.md
Esercitazione_5_c++_OOP/Exercise_1/: CMakeLists.txt  README.md  main.cpp
Esercitazione_5_c++_OOP/Exercise_1/Solution/: CMakeLists.txt
Esercitazione_5_c++_OOP/Exercise_1/Solution/src/: CMakeLists.txt  car.cpp  car.hpp  test_car.hpp
Esercitazione_5_c++_OOP/Exercise_1/src/: CMakeLists.txt  car.cpp  car.hpp  test_car.hpp
Esercitazione_5_c++_OOP/Exercise_2/: main.cpp
Esercitazione_5_c++_OOP/Exercise_2/src/: shape.cpp  shape.hpp  test_shape.hpp
Esercitazione_5_c++_OOP/build-Exercise_2-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
Esercitazione_5_c++_OOP/build-Exercise_2-Desktop-Debug/src/: Makefile  cmake_install.cmake
Exercise_2/src/: sorting.hpp  test_sorting.hpp
Projects/Delaunay/: main_program.cpp
Projects/Delaunay/src/: empty_class.cpp  empty_class.hpp
Projects/Delaunay/test/: test_empty.hpp
Projects/build-Delaunay-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  delaunay_test[1]_include.cmake  delaunay_test[1]_tests.cmake  output_points.csv  output_points.txt  output_sides.csv  output_sides.txt  qtcsettings.cmake
Projects/build-Delaunay-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-ed7dcc9b29bccf900d02.json  cmakeFiles-v1-a74bc34a9c6c64278a07.json  codemodel-v2-feda2c1a8e6b5dafa978.json  index-2023-05-17T07-43-02-0287.json  target-delaunay_program-Debug-6c4394280451e10b599a.json  target-delaunay_test-Debug-69dd57924d68e03510df.json
Projects/build-Delaunay-Desktop-Debug/src/: Makefile  cmake_install.cmake
Projects/build-Delaunay-Desktop-Debug/test/: Makefile  cmake_install.cmake
